# MiniProjectsComputerVision

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: ci.yaml
NormalizingFlow/flow_matching/: README.md  pyproject.toml
NormalizingFlow/flow_matching/results/: history_celeba_seed_4028943559_final.json
NormalizingFlow/flow_matching/src/: data_loader.py  hyperparameters.yaml  model.py  plot.py  train.py  utils.py
NormalizingFlow/flow_matching/src/results/: history_celeba_final.json  history_cifar10_final.json  history_cifar10_seed_2268134838.json  history_cifar10_seed_3549799452.json
VAE/: README.md  pyproject.toml
VAE/src/: hyperparameters.yaml  load_data.py  model.py  plot.py  test.py  train.py  utils.py
VAE/src/results/: celeba_test_results.json  celeba_training_history.json  cifar10_test_results.json  cifar10_training_history.json
meta_learning/: training.py
object_recognition/inceptionv1/config/: config.yaml
object_recognition/inceptionv1/data/: data_loader.py
object_recognition/inceptionv1/training/: train.py
object_recognition/resnet34/utils/: logger.py
object_recognition/vgg11/: main.py
object_recognition/vgg11/inference/: inference.py
object_recognition/vgg11/training/: train.py
supervised_learning/cnn_from_scratch/: cnn.py  data.py  evaluation.py  lenets.py  main.py
supervised_learning/cnn_from_scratch/models/: lenet5_trained.pkl
supervised_learning/inceptionv1/: main.py
supervised_learning/inceptionv1/inference/: inference.py
supervised_learning/inceptionv1/models/: inception.py
supervised_learning/inceptionv1/utils/: logger.py
supervised_learning/resnet34/: main.py
supervised_learning/resnet34/config/: config.yaml
supervised_learning/resnet34/data/: data_loader.py
supervised_learning/resnet34/inference/: inference.py
supervised_learning/resnet34/models/: resnet.py
supervised_learning/resnet34/training/: train.py
supervised_learning/resnet34/utils/: metrics.py
supervised_learning/vgg11/config/: config.yaml
(+103 files in other folders)
